Cloud Storage initial branch with UI only, non functional

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,5 +23,6 @@
     <string name="sign_up_success">Signed up with</string>
     <string name="et_message_board">Type a message</string>
     <string name="button_send_to_the_board">Send to The Board</string>
+    <string name="button_send_to_cloud">Send To Cloud Storage</string>
 
 </resources>
