Receive image from Cloud Storage and load into ImageView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="et_message_board">Type a message</string>
     <string name="button_send_to_the_board">Send to The Board</string>
     <string name="button_send_to_cloud">Send To Cloud Storage</string>
+    <string name="button_receive_from_cloud">Receive From Cloud</string>
 
 </resources>
